--- a/Formulaires/CSS/Accueil.css
+++ b/Formulaires/CSS/Accueil.css
@@ -15,36 +15,7 @@
     }
 
     header>img{
-        margin-left: 650px;
-    }
-
-    #BlocRetour{
-        position: absolute;
-        top: 5px;
-        left: 5px;
-        background-color: rgba(200,200,200,0.1);
-        height: 70px;
-        width: 160px;
-        padding: 5px;
-        color: rgb(52,182,231);
-        border-radius: 4px;
-        text-decoration: none;
-        transition-property: height, box-shadow, color;
-        transition-duration: 0.15s;
-    }
-        
-    #BlocRetour>img
-    {
-        position: absolute;
-        top: 25px;
-        left: 55px;
-        width: 40px;
-        height: 40px;   
-    }
-
-    #BlocRetour:hover{
-        box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.55);
-        color: rgb(67,101,148);
+        margin-left: 40%;
     }
 
 
@@ -78,7 +49,7 @@
 
     h1{
 
-        margin-left: 535px;
+        margin-left: 35%;
         text-decoration: underline;
         color: #f5f5f5;
         text-shadow: 1px 1px 5px rgb(155,155,155), -1px 1px 5px black;
@@ -87,9 +58,7 @@
 
     #Blabla
     {
-        position: absolute;
-        top: 280px;
-        left: 360px;
+        margin-left: 36%;
     }
 
 
@@ -119,16 +88,6 @@
         height: 430px;
     }
 
-    Table{
-        margin: auto;
-        margin-top: 50px;
-    }
-
-    #NouvelleLigne{
-        margin-left: 501px;
-    }
-
-
     a>p{
         text-align: center;
         color: white;
@@ -138,58 +97,6 @@
 
         margin-top: 150px;
 
-    }
-
-    a>img{
-        position: absolute;
-        top: 210px;
-        left: 25px;
-        width: 150px;
-
-    }
-
-    .Navi
-    {
-        position: absolute;
-        margin-bottom: 10px;
-        top: 0px;
-        left: -304px;
-        padding-top: 10px;
-        color: white;
-        box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.55), -5px 5px 5px rgba(0, 0, 0, 0.55);
-        height: 97%;
-        width: 300px;
-        -moz-transition-property: left;
-        -o-transition-property: left;
-        -webkit-transition-property: left;
-        transition-property: left;
-        -moz-transition-duration: 0.3s;
-        -o-transition-duration: 0.3s;
-        -webkit-transition-duration: 0.3s;
-        transition-duration: 0.3s;
-        transition-delay: 0.1s;
-    }
-
-    .Navi:hover{
-        top: 0px;
-        left: 0px;
-
-        z-index: 1;
-    }
-
-
-    .BoutonConsulter{
-        background-color: red;
-        position: absolute;
-        right: -58px;
-        box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.55);
-        width: 50px;
-        height: 40px;
-        padding: 5px;
-        text-align: center;
-        border-bottom-left-radius: 4px;
-        border-top-right-radius: 4px;
-        cursor: pointer;    
     }
 }
 
@@ -214,68 +121,49 @@
         margin-left: 25%;
     }
 
-    #BlocRetour{
-        position: absolute;
-        top: 5px;
-        left: 5px;
-        background-color: rgba(200,200,200,0.1);
-        height: 70px;
-        width: 160px;
-        padding: 5px;
-        color: rgb(52,182,231);
-        border-radius: 4px;
-        text-decoration: none;
-        transition-property: height, box-shadow, color;
-        transition-duration: 0.15s;
-    }
-        
-    #BlocRetour>img
-    {
-        position: absolute;
-        top: 25px;
-        left: 55px;
-        width: 40px;
-        height: 40px;   
-    }
-
-    #BlocRetour:hover{
-        box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.55);
-        color: rgb(67,101,148);
-    }
-
-
     #User{
+        width:100%;
         position: absolute;
-        right: 20px;
-        top: 20px;
+        right: 0px;
+        bottom: 0px;
     }
 
     #User>img{
-        width: 50px;
+        display:none;
+    }
+
+    #User b::before{
+        content:"Connecté en tant que: ";
     }
 
     #User>ul{
-        background-color: #98c3c6;  
         padding: 10px;
         list-style-type:none;
-        display: none;
-        box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.4); 
-        font-size: 15px;
-    }
-
-    #User:hover ul{
         display: block;
-        cursor: pointer;
+        font-size: 15px;
+        width:100%;
     }
 
-    li:hover{
-        color: white;
+    ul>li{
+        width:100%;
+    }
+
+    li>a{
+        background-color: red;  
+        color: black;
+        font-weight: bold;
+        text-decoration:none;
+        box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.4); 
+        border-radius: 5px;
+        width: 100%;
+        padding: 10px 34%;
     }
 
     h1{
 
-        margin-left: 535px;
+        margin-left: 6%;
         text-decoration: underline;
+        font-size: 26px;
         color: #f5f5f5;
         text-shadow: 1px 1px 5px rgb(155,155,155), -1px 1px 5px black;
 
@@ -283,47 +171,20 @@
 
     #Blabla
     {
-        position: absolute;
-        top: 280px;
-        left: 360px;
+        margin-left: 5px;
+        width: 97%;
     }
-
 
     .Bloc
     {
-        height: 400px;
-        width: 200px;
+        height: 150px;
+        width: 100%;
         display: inline-block;
-        margin: 10px;
+        margin: 7px 1px;
         background-color: #52dae4;
-        box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.55);
-        -moz-transition-property: height, box-shadow;
-        -o-transition-property: height, box-shadow;
-        -webkit-transition-property: height, box-shadow;
-        transition-property: height, box-shadow;
-        -moz-transition-duration: 0.15s;
-        -o-transition-duration: 0.15s;
-        -webkit-transition-duration: 0.15s;
-        transition-duration: 0.15s;
+        box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.55);   
         text-decoration: none;
     }
-
-
-    .Bloc:hover
-    {
-        box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.6);
-        height: 430px;
-    }
-
-    Table{
-        margin: auto;
-        margin-top: 50px;
-    }
-
-    #NouvelleLigne{
-        margin-left: 501px;
-    }
-
 
     a>p{
         text-align: center;
@@ -332,59 +193,7 @@
 
         font-size: 20px;
 
-        margin-top: 150px;
+        margin-top: 60px;
 
-    }
-
-    a>img{
-        position: absolute;
-        top: 210px;
-        left: 25px;
-        width: 150px;
-
-    }
-
-    .Navi
-    {
-        position: absolute;
-        margin-bottom: 10px;
-        top: 0px;
-        left: -304px;
-        padding-top: 10px;
-        color: white;
-        box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.55), -5px 5px 5px rgba(0, 0, 0, 0.55);
-        height: 97%;
-        width: 300px;
-        -moz-transition-property: left;
-        -o-transition-property: left;
-        -webkit-transition-property: left;
-        transition-property: left;
-        -moz-transition-duration: 0.3s;
-        -o-transition-duration: 0.3s;
-        -webkit-transition-duration: 0.3s;
-        transition-duration: 0.3s;
-        transition-delay: 0.1s;
-    }
-
-    .Navi:hover{
-        top: 0px;
-        left: 0px;
-
-        z-index: 1;
-    }
-
-
-    .BoutonConsulter{
-        background-color: red;
-        position: absolute;
-        right: -58px;
-        box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.55);
-        width: 50px;
-        height: 40px;
-        padding: 5px;
-        text-align: center;
-        border-bottom-left-radius: 4px;
-        border-top-right-radius: 4px;
-        cursor: pointer;    
     }
 }
