--- a/Formulaires/CSS/Accueil.css
+++ b/Formulaires/CSS/Accueil.css
@@ -43,6 +43,17 @@
         cursor: pointer;
     }
 
+
+    #User a{
+        color: black;
+        text-decoration: none;
+        font-weight: bold;
+    }
+
+    #User a:hover{
+        color: white;
+    }
+
     li:hover{
         color: white;
     }
@@ -67,7 +78,6 @@
         height: 400px;
         width: 200px;
         display: inline-block;
-        margin: 10px;
         background-color: #52dae4;
         box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.55);
         -moz-transition-property: height, box-shadow;
@@ -88,16 +98,29 @@
         height: 430px;
     }
 
+   .Bloc:first-child{
+        float:left;
+   }
+
     a>p{
         text-align: center;
         color: white;
         text-shadow: 0px 2px 5px black;
 
         font-size: 20px;
-
-        margin-top: 150px;
+        margin: 75% auto;
 
     }
+
+    div.btn { position: relative; overflow: hidden; width:200px; height:400px; margin: 10px;display: inline-block;}
+    div.btn > a { cursor: pointer;}
+    .qe { display: block; position: absolute; background: rgba(180,180,180, 0.7); border-radius: 100%; transform: scale(0);}
+    .qe.ani {
+        animation: ripple 0.5s linear;
+        webkit-animation: ripple 0.5s linear;
+    }
+    @keyframes ripple { 100% {opacity: 0; transform: scale(2.5);} }
+    @-webkit-keyframes ripple { 100% {opacity: 0; transform: scale(2.5);} }
 }
 
 @media screen and (max-width: 640px)
@@ -123,9 +146,7 @@
 
     #User{
         width:100%;
-        position: absolute;
-        right: 0px;
-        bottom: 0px;
+        margin-top: 20px;
     }
 
     #User>img{
