--- a/Formulaires/CSS/Accueil.scss
+++ b/Formulaires/CSS/Accueil.scss
@@ -12,11 +12,10 @@
     header{
         height: 200px;
         position: relative;
-    }
 
-    header>img{
-        margin:auto;
-        display:block;
+        img{
+            margin-left: 40%;
+        }
     }
 
 
@@ -61,9 +60,7 @@
 
     h1{
 
-        margin: 30px auto;
-        display: block;
-        width: intrinsic;
+        margin-left: 35%;
         text-decoration: underline;
         color: #f5f5f5;
         text-shadow: 1px 1px 5px rgb(155,155,155), -1px 1px 5px black;
@@ -118,7 +115,7 @@
 
     div.btn { position: relative; overflow: hidden; width:200px; height:400px; margin: 10px;display: inline-block;}
     div.btn > a { cursor: pointer;}
-    .qe { display: block; position: absolute; background: rgba(255,255,255, 0.7); border-radius: 100%; transform: scale(0);}
+    .qe { display: block; position: absolute; background: rgba(180,180,180, 0.7); border-radius: 100%; transform: scale(0);}
     .qe.ani {
         animation: ripple 0.5s linear;
         webkit-animation: ripple 0.5s linear;
@@ -140,14 +137,12 @@
 
     header{
         width:100%;
-        height: intrinsic;
+        height: 200px;
         position: relative;
     }
 
     header>img{
-        margin:auto;
-        display:block;
-        height:100px;
+        margin-left: 25%;
     }
 
     #User{
